# 2025-final-command-team-3-backend

./: CREDENTIALS.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
jobs/: compose.yaml
nginx/: nginx.conf
src/app/: db.py  main.py
src/app/api/endpoints/: auth.py  collection.py  images.py  movies.py  users.py
src/app/core/: config.py  elasticsearch.py  minio_client.py  security.py
src/app/models/: custom_movie.py  movie.py  user.py  user_movie.py
src/app/repositories/: custom_movie_repository.py  movie_repository.py  user_movie_repository.py  user_repository.py
src/app/schemas/: collection.py  enums.py  movie.py  user.py  user_movie.py
src/app/services/: custom_movie_service.py  google_oauth.py  movie_service.py  user_movie_service.py  user_service.py  yandex_service.py
src/tools/: parse-movies.py
tests/: conftest.py  test_auth.py  test_collection.py  test_images.py  test_movies.py  test_users.py
